# Double-Pendulum-Balancer

./: .gitignore  CMakeLists.txt  Readme.md  build.bat  clean_build.bat  imgui.ini  run.bat
include/: DoublePendulum.h  ImGuiRenderer.h  MPC_Controller.h  Renderer.h
src/: DoublePendulum.cpp  ImGuiRenderer.cpp  MPC_Controller.cpp  Renderer.cpp  main.cpp
